source/main/assembly/resources/themes/xenon-dark/xenon-dark.css
.root {
  -fx-base: rgb(50, 50, 50);
  -fx-background: rgb(50, 50, 50);

  -fx-color: derive(-fx-base, 10%);

  -fx-control-inner-background: rgb(20, 20, 20);
  -fx-control-inner-background-alt: derive(-fx-control-inner-background, 2.5%);

  -fx-light-text-color: rgb(220, 220, 220);
  -fx-mid-text-color: rgb(100, 100, 100);
  -fx-dark-text-color: rgb(20, 20, 20);

	-fx-accent: #303F9F;
	-fx-focus-color: #E65100;
	-fx-faint-focus-color: #E6510022;

  -fx-selection-bar-non-focused: rgb(50, 50, 50);

	-ex-background-tint-color: #20202040;
  
 	-ex-background-text: rgba(108, 108, 108, 0.2);
	-ex-background-tabs: rgba(108, 108, 108, 0.4);
	-ex-background-tags: rgba(108, 108, 108, 0.6);
	-ex-background-note: rgba(108, 108, 108, 0.8);

	-ex-work-pane-drop-hint: rgba(224, 224, 224, 0.2);
}

.xe-icon {
	-xe-outline-paint: derive( -fx-text-base-color, -20% );
}

.text-input {
  -fx-prompt-text-fill: derive(-fx-control-inner-background, +50%);
}

/* Keep prompt invisible when focused (above color fix overrides it) */
.text-input:focused {
  -fx-prompt-text-fill: transparent;
}

.scroll-bar > .increment-button > .increment-arrow,
.scroll-bar > .decrement-button > .decrement-arrow {
  -fx-background-color: -fx-mark-highlight-color, rgb(220, 220, 220);
}

.scroll-bar > .increment-button:hover > .increment-arrow,
.scroll-bar > .decrement-button:hover > .decrement-arrow {
  -fx-background-color: -fx-mark-highlight-color, rgb(240, 240, 240);
}

.scroll-bar > .increment-button:pressed > .increment-arrow,
.scroll-bar > .decrement-button:pressed > .decrement-arrow {
  -fx-background-color: -fx-mark-highlight-color, rgb(255, 255, 255);
}

